--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -1,4 +1,6 @@
-{% include '@AcMarche/home/_hero.html.twig' %}
-{% include '@AcMarche/home/_quick_access.html.twig' %}
-{% include '@AcMarche/home/_agenda.html.twig' %}
-{% include '@AcMarche/home/_news.html.twig' %}
+<main>
+    {% include '@AcMarche/home/_hero.html.twig' %}
+    {% include '@AcMarche/home/_quick_access.html.twig' %}
+    {% include '@AcMarche/home/_agenda.html.twig' %}
+    {% include '@AcMarche/home/_news.html.twig' %}
+</main>
