--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -83,5 +83,7 @@
     </header>
     <!-- Desktop Menu Panel -->
     {% include '@AcMarche/navigation/_desktop_menu.html.twig' %}
+    {# Mobile Menu Panel #}
+    {% include '@AcMarche/navigation/_mobile_menu.html.twig' %}
 
 </nav>
