--- a/wp-content/themes/marchebe/templates/error/_error.html.twig
+++ b/wp-content/themes/marchebe/templates/error/_error.html.twig
@@ -16,6 +16,14 @@
                 </div>
 
             {% endif %}
+
+            {% if statusCode is defined %}
+            statusCode:    {{ statusCode }}
+            {% endif %}
+
+            {% if statusText is defined %}
+             statusText:   {{ statusText }}
+            {% endif %}
         </div>
     </div>
 </section>
