--- a/wp-content/themes/marchebe/templates/news/index.html.twig
+++ b/wp-content/themes/marchebe/templates/news/index.html.twig
@@ -2,13 +2,13 @@
     {% include '@AcMarche/article/_header.html.twig' %}
     <div class="container mx-auto mb-2 px-4 sm:px-6 lg:px-8">
         {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
-        <h2 class="text-3xl font-bold text-center mb-10">L'actualités</h2>
+        <h2 class="text-3xl font-bold text-center mb-10">{{ title }}</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- Related Article Card 1 -->
-            {% for item in data %}
+            {% for item in news %}
                 <a
                         class="group block bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300"
-                        href="{{ item.blog }}/article/{{ item.ID }}"
+                        href="{{ item.url }}"
                 >
                     <img class="h-48 w-full object-cover"
                          src="{{ item.post_thumbnail_url }}"
