--- a/wp-content/themes/marchebe/templates/home/_shortcuts.html.twig
+++ b/wp-content/themes/marchebe/templates/home/_shortcuts.html.twig
@@ -3,6 +3,7 @@
         <div class="grid grid-cols-3 lg:grid-cols-[repeat(3,minmax(0,300px))] gap-2 lg:gap-4 justify-center align-center">
             {% for shortcut in shortcuts %}
                 <a
+                        title="{{ shortcut.description }}"
                         href="{{ shortcut.url }}"
                         class="group bg-white p-2 rounded-2xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 flex flex-col items-center text-center md:rounded-xl">
                     <div
