--- a/wp-content/themes/marchebe/templates/home/_news.html.twig
+++ b/wp-content/themes/marchebe/templates/home/_news.html.twig
@@ -16,7 +16,7 @@
             {% endfor %}
         </div>
     </div>
-    <a href="/news"
+    <a href="/actualites"
        class="inline-block mt-8  bg-cta-dark text-white font-semibold py-2 px-5 rounded-lg hover:bg-cta-light transition-colors">
         Toutes les actualités
     </a>
