--- a/wp-content/themes/marchebe/assets/css/tailwind.css
+++ b/wp-content/themes/marchebe/assets/css/tailwind.css
@@ -59,6 +59,10 @@ img, video, iframe {
     grid-template-rows: auto 1fr auto;
 }
 
+[x-cloak] {
+  display: none !important;
+}
+
 /** animation **/
 
 /* Hero image subtle zoom animation */
