--- a/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
@@ -1,5 +1,5 @@
 <div class="flex space-x-6">
-    <button @click="isModalOpen=true" class="cursor-pointer md:inline text-gray-600 hover:text-cta-light">
+    <button @click="openSearchModal()" class="cursor-pointer md:inline text-gray-600 hover:text-cta-light">
         <i class="fas fa-search"></i>
     </button>
     <button class="hidden text-gray-600 text-xl hover:text-blue-400  transition-colors">
