--- a/wp-content/themes/marchebe/templates/category/_posts.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_posts.html.twig
@@ -17,6 +17,9 @@
                     </a>
                 </div>
             </template>
+            <div x-show="posts.length === 0" class="text-center">
+                Aucun article pour le moment.
+            </div>
         </div>
     </div>
 </section>
