--- a/wp-content/themes/marchebe/templates/home/_form_search.html.twig
+++ b/wp-content/themes/marchebe/templates/home/_form_search.html.twig
@@ -1,4 +1,4 @@
-  <form action="/search" method="GET" role="search">
+  <form action="/" method="GET" role="search">
     <label for="hero-search" class="sr-only">Rechercher sur le site</label>
     <div class="relative">
       <!-- Search Icon (decorative) -->
@@ -9,8 +9,9 @@
       <!-- Search Input -->
       <input
           id="hero-search"
-          name="q"
+          name="s"
           type="search"
+          autocomplete="off"
           placeholder="Que cherchez-vous ?"
           class="w-full py-3 pl-12 pr-16 md:pr-32 text-gray-900 bg-white rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition-shadow"
       >
