--- a/wp-content/themes/marchebe/templates/search.html.twig
+++ b/wp-content/themes/marchebe/templates/search.html.twig
@@ -51,6 +51,9 @@
                                 </div>
 
                                 <div class="flex flex-col gap-2">
+                                     <span class="text-sm text-gray-500">
+                                       {{ result.site.name }} >
+                                    </span>
                                     {% for path in result.paths %}
                                         <span class="text-sm text-gray-500">
                                        {{ path.name }} >
