--- a/wp-content/themes/marchebe/templates/category/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_header.html.twig
@@ -1,5 +1,5 @@
-<section class="relative  bg-blue-50 text-black flex flex-col ">
-    <header class="container mx-auto  text-center mt-3 animate-fade-in-up"
+<section class="relative  bg-blue-50 text-black flex flex-col">
+    <header class="container mx-auto  text-center mt-3 animate-fade-in-up my-4"
             style="animation: fade-in-up 1s ease-out forwards;">
         {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
         <h1 class="text-4xl md:text-6xl font-bold  text-cta-dark">{{ category.name|raw }}</h1>
