--- a/wp-content/themes/marchebe/templates/widgets/_map.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_map.html.twig
@@ -1,28 +1,42 @@
 {% if latitude and longitude %}
 
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
+
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
+
     <div id="openmap" class="mt-3" style="width: 100%; height: 400px;"></div>
 
     <script type="text/javascript">
-        const latitude = '{{ latitude }}';
-        const longitude = '{{ longitude }}';
-        const center = [ latitude, longitude ];
-        const map = L.map( 'openmap' )
-            .setView( center, 15 );
-        const nom = "{{ title|raw }}";
+        // Wait for Leaflet to load before initializing map
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof L !== 'undefined') {
+                const latitude = parseFloat('{{ latitude }}');
+                const longitude = parseFloat('{{ longitude }}');
+                const center = [latitude, longitude];
+                const nom = "{{ title|raw }}";
 
-        L.tileLayer( 'https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
-            minZoom: 1,
-            maxZoom: 20
-        } )
-            .addTo( map );
+                const map = L.map('openmap').setView(center, 15);
 
-        L.marker( center, {
-            title: nom,
-            draggable: true
-        } )
-            .addTo( map );
+                L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+                    attribution: '&copy; <a href="https://osm.org/copyright">OpenStreetMap</a> contributors',
+                    minZoom: 1,
+                    maxZoom: 20
+                }).addTo(map);
 
+                L.marker(center, {
+                    title: nom,
+                    draggable: false
+                }).addTo(map)
+                  .bindPopup(nom)
+                  .openPopup();
+            }
+        });
     </script>
 
 {% endif %}
