--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -67,7 +67,7 @@
     },
     menuData: {{ menu_data }}
     }">
-    <header class="bg-white shadow-md relative z-40">
+    <header class="bg-white shadow-md relative z-40" id="main-header">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 <a href="/" class="">
