--- a/wp-content/themes/marchebe/templates/news/index.html.twig
+++ b/wp-content/themes/marchebe/templates/news/index.html.twig
@@ -8,7 +8,7 @@
             {% for item in news %}
                 <a
                         class="group block bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300"
-                        href="{{ item.url }}"
+                        href="{{ item.link }}"
                 >
                     <img class="h-48 w-full object-cover"
                          src="{{ item.post_thumbnail_url }}"
