--- a/wp-content/themes/marchebe/assets/css/tailwind.css
+++ b/wp-content/themes/marchebe/assets/css/tailwind.css
@@ -48,7 +48,7 @@ body {
     @apply antialiased text-cta-dark;
 }
 
-#homepage,#main-header a {
+#homepage a,#main-header a {
     text-decoration: none;
 }
 
